--- a/frontend/app/views/register.html
+++ b/frontend/app/views/register.html
@@ -1,10 +1,10 @@
 <form ng-submit="vm.submit()" name="register" class="form-signin" novalidate>
   <h1 class="form-signin-heading text-muted">Register</h1>
-  <input name="email" ng-model="email" type="email" class="form-control" placeholder="Email address" required autofocus>
+  <input name="email" ng-model="vm.email" type="email" class="form-control" placeholder="Email address" required autofocus>
   <p class="help-block" ng-show="register.email.$dirty && register.email.$invalid">Please enter a proper email.</p>
-  <input name="password" type="password" ng-model="password" class="form-control" placeholder="Password" required=>
-  <input name="password_confirm" type="password" ng-model="password_confirm" class="form-control"
-         placeholder="Confirm Password" validate-equals="password">
+  <input name="password" type="password" ng-model="vm.password" class="form-control" placeholder="Password" required=>
+  <input name="password_confirm" type="password" ng-model="vm.password_confirm" class="form-control"
+         placeholder="Confirm Password" validate-equals="vm.password" required>
   <p class="help-block" ng-show="register.password_confirm.$dirty && register.password_confirm.$invalid">please match
     the password</p>
   <button ng-disabled="register.$invalid" class="btn btn-lg btn-primary btn-block" type="submit">
